# redmax

./: .gitignore  LICENSE  README.md
c++/PCG/: CMakeLists.txt  README.md
c++/PCG/cmake/: FindEigen3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindJSONCPP.cmake  FindMKL.cmake  FindPardiso.cmake
c++/PCG/resources/: input.txt  input2.txt  input_OPT.txt  input_OPT_123.txt  input_bad.txt  input_nospline.txt  input_red.txt  input_simple.txt  input_test.txt  linkages_auto_save.txt  old_setup_scenarios.txt  removed_11_8.txt  result_spline_auto_save_KEEP_TWEAKINGINPUT.txt  splines_auto_save.txt  splines_hand.txt  syntax.txt
c++/PCG/src/: Block.h  ChronoTimer.h  Constraint.cpp  Constraint.h  ConstraintJoint.cpp  ConstraintJoint.h  Cuboid.cpp  Cuboid.h  JSONwrapper.h  Joint.cpp  Joint.h  JointBall.cpp  JointBall.h  JointFixed.cpp  JointFixed.h  JointHinge.cpp  JointHinge.h  JointPowered.cpp  JointPowered.h  JointPrismatic.cpp  JointPrismatic.h  JointSlider.cpp  JointSlider.h  JointSpringy.cpp  JointSpringy.h  JointUniversal.cpp  JointUniversal.h  LinkageSystem.h  Rigid.cpp  Rigid.h  RigidBodyCreator.cpp  RigidBodyCreator.h  RigidBodyMain.cpp  RigidBodyMain.h  RigidBodyUtility.h  Scene.cpp  Scene.h  Solver.cpp  Solver.h  State.h  (+3 more)
c++/PCG/src/online/: Camera.cpp  Camera.h
c++/PCG/src/online/Brender/cpp/: BrenderManager.cpp  BrenderManager.h  Brenderable.h
c++/PCG/src/online/Brender/python/: blender_import_obj_base.py  brender_panel_addon.py
matlab/: README.md  se3.m  testRedMax.m  testRedMaxScenes.m
matlab-diff/: driverRedMaxAdjointBDF1.m  driverRedMaxAdjointBDF2.m  driverRedMaxBDF1.m  driverRedMaxBDF2.m  scenesRedMax.m
matlab-diff/+redmax/: Body.m  Force.m  ForceCable.m  ForceGroundCuboid.m  ForceNull.m  ForcePointPoint.m  ForceSpringDamper.m  ForceSpringGeneric.m  ForceSpringMultiPointGeneric.m  Joint.m  JointFixed.m  JointFree2D.m  JointFree3D.m  JointPlanar.m  JointPrismatic.m  JointRevolute.m  JointSpherical.m  JointTranslational.m  JointUniversal.m  Scene.m  TaskBDF1.m  TaskBDF1PointPos.m  TaskBDF2.m  TaskBDF2PointPos.m
matlab-simple/: README.md  testJoint.m  testRedMax.m  testRedMaxScenes.m  testRigid.m
matlab-simple/+redmax/: Body.m  Joint.m  JointFixed.m  JointRevolute.m  Scene.m
matlab/+redmax/: Body.m  BodyComposite.m  BodyCuboid.m  BodyCylinder.m  BodyMeshObj.m  BodySphere.m  Constraint.m  ConstraintAttachSpring.m  ConstraintFloor.m  ConstraintJointLimit.m  ConstraintLoop.m  ConstraintMultQ.m  ConstraintNull.m  ConstraintPrescBody.m  ConstraintPrescJoint.m  ConstraintPrescJointM.m  Deformable.m  DeformableNull.m  DeformableSpring.m  Joint.m  JointComposite.m  JointFree.m  JointFree2D.m  JointFree3D.m  JointPlanar.m  JointPrismatic.m  JointRevolute.m  JointSphericalExp.m  JointSplineCurve.m  JointSplineSurface.m  JointTranslational.m  JointUniversal.m  Scene.m  Spring.m  SpringDamper.m  SpringNull.m  SpringPointDirection.m  SpringPointPoint.m
